
- cURL:
  . Fixed bug #74125 (Fixed finding CURL on systems with multiarch support).
    (cebe)

- GD:
  . Added support for WebP in imagecreatefromstring() (Andreas Treichel, cmb).

- GMP:
  . Export internal structures and accessor helpers for GMP object. (Sara)

- intl:
  . Fixed bug #75317 (UConverter::setDestinationEncoding changes source instead 
    of destination). (andrewnester)

- LDAP:
  . Added ldap_exop_refresh helper for EXOP REFRESH operation with dds overlay. 
    (Come)
  . Added full support for sending and parsing ldap controls (Come)

- litespeed:
  . Fixed bug #75248 (Binary directory doesn't get created when building 
    only litespeed SAPI). (petk)
  . Fixed bug #75251 (Missing program prefix and suffix). (petk)

- Mbstring:
  . Fixed bug #65544 (mb title case conversion-first word in quotation isn't
    capitalized). (Nikita)
  . Fixed bug #71298 (MB_CASE_TITLE misbehaves with curled apostrophe/quote.
    (Nikita)
  . Fixed bug #73528 (Crash in zif_mb_send_mail). (Nikita)
  . Fixed bug #74929 (mbstring functions version 7.1.1 are slow compared to 5.3
    on Windows). (Nikita)

- ODBC:
  . Removed support for ODBCRouter. (Kalle)
  . Removed support for Birdstep. (Kalle)

- PDO_DBlib:
  . Implemented request #69592 (allow 0-column rowsets to be skipped
    automatically). (fandrieu)

- PDO_OCI:
  . Fixed bug #74631 (PDO_PCO with PHP-FPM: OCI environment initialized
    before PHP-FPM sets it up). (Ingmar Runge)

- PDO SQLite
  . Add support for additional open flags

- phar:
  . Fixed bug #74991 (include_path has a 4096 char limit in some cases).
    (bwbroersma)

- pgsql:
  . Added new error constants for pg_result_error(): (Kalle)
    - Requires Postgres 9.3
      - PGSQL_DIAG_SCHEMA_NAME
	  - PGSQL_DIAG_TABLE_NAME
	  - PGSQL_DIAG_COLUMN_NAME
	  - PGSQL_DIAG_DATATYPE_NAME
	  - PGSQL_DIAG_CONSTRAINT_NAME
	- Requires Postgres 9.6
	  - PGSQL_DIAG_SEVERITY_NONLOCALIZED

- Session: