@@ -55,6 +55,15 @@ BCMath:
 5. Changed Functions
 ========================================
 
+JSON:
+  . A new flag has been added, JSON_THROW_ON_ERROR, which can be used with
+    json_decode() or json_encode() and causes these functions to throw a
+    JsonException upon an error, instead of setting the global error state that
+    is retrieved with json_last_error(). JSON_PARTIAL_OUTPUT_ON_ERROR takes
+    precedence over JSON_THROW_ON_ERROR.
+    (RFC: https://wiki.php.net/rfc/json_throw_on_error)
+
+Standard:
   . debug_zval_dump() was changed to display recursive arrays and objects
     in the same way as var_dump(). Now, it doesn't display them twice.
 
@@ -69,6 +78,9 @@ Date:
 ========================================
 7. New Classes and Interfaces
 ========================================
+
+JSON:
+  . JsonException
 
 ========================================
 8. Removed Extensions and SAPIs
@@ -92,6 +104,9 @@ Date:
 ========================================
 10. New Global Constants
 ========================================
+
+JSON:
+  . JSON_THROW_ON_ERROR
 
 PGSQL:
   . Requires Postgres 9.3
